--- a/index.html
+++ b/index.html
@@ -1,69 +1,91 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="styles.css" type="text/css">
-  </head>
-  <body>
-    <h1>HTML Table Reference</h1>
-    <h2>Table Tags</h2>
-    <table>
-      <thead>
-        <th>Tag</th>
-        <th>Name</th>
-        <th>Description</th>
-      </thead>
-      <tbody>
-        <tr>
-          <td><span class="code">&lt;table&gt;</span></td>
-          <td>Table</td>
-          <td>The wrapper element for all HTML tables.</td>
-        </tr>
-        <tr>
-          <td><span class="code">&lt;thead&gt;</span></td>
-          <td>Table Head</td>
-          <td>The set of rows defining the column headers in a table.</td>
-        </tr>
-        <tr>
-          <td><span class="code">&lt;tbody&gt;</span></td>
-          <td>Table Body</td>
-          <td>The set of rows containing actual table data.</td>
-        </tr>
-        <tr>
-          <td><span class="code">&lt;tr&gt;</span></td>
-          <td>Table Row</td>
-          <td>The table row container.</td>
-        </tr>
-        <tr>
-          <td><span class="code">&lt;td&gt;</span></td>
-          <td>Table Data</td>
-          <td>The table row container.</td>
-        </tr>
-        <tr>
-          <td><span class="code">&lt;tfoot&gt;</span></td>
-          <td>Table Foot</td>
-          <td>The set of rows defining the footer in a table.</td>
-        </tr>
-      </tbody>
-    </table>
+    <head>
+        <title>CSS Styling CheatSheet</title>
+        <link rel="stylesheet" href="styles.css" type="text/css">
+    </head>
 
-    <h2>Table Attributes</h2>
-    <table>
-      <thead>
-        <th>Attribute</th>
-        <th>Name</th>
-        <th>Description</th>
-      </thead>
-      <tbody>
-        <tr>
-            <td><span class="code">colspan</span></td> 
-            <td>Column Span</td>
-            <td>Defines how many columns a td element should span.</td>
-          </tr>
-        <tr>
-          <td><span class="code">rowspan</span></td>
-          <td>Row Span</td>
-          <td>Defines how many rows a td element should span.</td>
-        </tr>
-      </tbody>
-    </table>
-  </body>
+    <body>
+        <h1>CSS STYLE REFERENCE</h1>
+        <H2>Display and Positioninig in CSS</H2>
+        <table>
+            <thead>
+                <th>Property</th>
+                <th>Description</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><span class="att">Position</span></td>
+                    <td>Position property specifies the type of positioninig method used for an element</td>
+                </tr>
+                <tr>
+                    <td><span class="att">Display</span></td>
+                    <td>Display property specifies if/how an element is displayed </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>Position Attributes</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Attributes</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><span class="att">Static</span></td>
+                    <td>Default position value</td>
+                </tr>
+
+                <tr>
+                    <td><span class="att">Relative</span></td>
+                    <td>Positions element relative to its normal position</td>
+                </tr>
+
+                <tr>
+                    <td><span class="att">Absolute</span></td>
+                    <td>Positions element relative to its closet positioned parent element</td>
+                </tr>
+
+                <tr>
+                    <td><span class="att">Fixed</span></td>
+                    <td>Fixes an element to a specific position on a page (regardless of scrolling)</td>
+                </tr>
+
+                <tr>
+                    <td><span class="att">Sticky</span></td>
+                    <td>Keeps an element in normal document flow as user scrolls, but sticks to specified position as page is scrolled further</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>Display Attributes</h2>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Attributes</th>
+                    <th>Value</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><span class="att">Inline</span></td>
+                    <td>Changes the display of Block elements to inline display</td>
+                </tr>
+
+                <tr>
+                    <td><span class="att">Block</span></td>
+                    <td>Changes the display of Inline elements to block display</td>
+                </tr>
+
+                <tr>
+                    <td><span class="att">Inline-Block</span></td>
+                    <td>Combine features of both Inline and Block</td>
+                </tr>
+            </tbody>
+        </table>
+    </body>
 </html>
